mail navigation handling

--- a/modules/auth/controller/emailTemplates/email-success.html
+++ b/modules/auth/controller/emailTemplates/email-success.html
@@ -40,7 +40,7 @@
     <div class="container">
         <h1>🎉 Email Confirmed!</h1>
         <p>Thank you for verifying your email. You can now log in to your account.</p>
-        <a href="https://google.com" class="btn">Go to Login</a>
+        <a href="loginhttp://localhost:5173/" class="btn">Go to Login</a>
     </div>
 </body>
 </html>
